# Offline-Trajectory-Provider

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yaml
data/: trajectory_lawnmower.csv  trajectory_validation.csv  trajectory_validation_100hz.csv  trajectory_validation_esekf.csv  trajectory_yoyo.csv
include/offline_trajectory_provider_package/: csv_reader.h
launch/: nanoauv_and_offline_trajectory.launch.py  nanoauv_navigation_robot.launch.py  navigation_filter_trajectory_provider.launch.py  offline_trajectory_provider_launch.launch.py
rviz/: nanoauv.rviz
src/: csv_reader.cpp  offline_trajectory_provider_node.cpp
test/: csv_reader_test.cpp
urdf/: lrs.urdf  nanoauv.urdf  nanoauv_green.urdf
urdf/meshes/stl/: lrs.stl  nanoauv.stl
